--- a/_posts/2015-02-18-test.md
+++ b/_posts/2015-02-18-test.md
@@ -1,7 +1,7 @@
 ---
 title: "test"
 date: 2025-02-18
-categories: [Daily, log]
+categories: [Daily]
 tags: [test]
 math: true
 toc: true
@@ -11,4 +11,4 @@ pin: true
   # alt: 
 ---
 
-test
+Test 
